# naturallanguageprocessingcompetition-nlp-5

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/datasets/: datasets.py
src/inference/: inference.py
src/preprocessing/: preprocessing.py
src/train/: train.py
src/utils/: utils.py
